--- a/style.css
+++ b/style.css
@@ -77,3 +77,79 @@ h2{
     color: white;
     margin-right: 30px;
  }
+ .donate-plan-des{
+    text-align: center;
+    margin-bottom: 50px;
+}
+#donate-plan{
+    padding: 0 15%;
+}
+.card{
+    display: flex;
+}
+.food{
+    width: 30%;
+     margin-left: 3%;
+    padding: 10px 20px;
+    border-radius: 10px;
+    background-color: rgb(237, 245, 246);
+}
+.selter{
+    width: 30%;
+    margin-left: 3%;
+    padding: 10px;
+    background-color: rgb(255, 238, 238);
+    border-radius: 10px;
+}
+.education{
+    width: 30%;
+    margin-left: 3%;
+    padding: 10px;
+    background-color:rgb(255, 244, 214) ;
+    border-radius: 10px;
+}
+#flood{
+
+}
+.trouble{
+    background-image: url(images/donation9.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.trouble-title{
+    padding: 200px;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.767);
+}
+.give-a-hand{
+    color: rgba(255, 166, 0, 0.87);
+    font-family: 'Tangerine', cursive;
+}
+.trouble-hr{
+    width: 50%;
+}
+.trouble-card{
+    display: flex;
+    margin-top: 30px;
+}
+.trouble-card div{
+    width: 25%;
+    margin: 0 20px;
+ }
+ .trouble-card div img{
+    width: 100%;
+    border-radius: 10px;
+    height: 175px;
+ }
+
+.our-help{
+    text-align: center;
+    margin-top: 20px;
+    margin-left: 35%;
+    box-shadow: 10px  10px 40px gray;
+    padding: 5px;
+    width: 30%;
+    border-radius: 10px;
+    border-top: 7px solid tomato;
+    border-bottom: 7px solid blue;
+}
