--- a/style.css
+++ b/style.css
@@ -153,3 +153,32 @@ h2{
     border-top: 7px solid tomato;
     border-bottom: 7px solid blue;
 }
+#my-updates{
+
+}
+.updates-des{
+    text-align: center;
+    padding: 0 20%;
+    margin-bottom: 40px;
+}
+.mail{
+    background-color: rgba(209, 200, 200, 0.336);
+    border: none;
+    padding: 5px 5px 5px 5px;
+    border-radius: 5px 0 0 5px;
+ }
+ .form-div{
+    background-color: rgb(255, 244, 214);
+    text-align: center;
+    width: 40%;
+    padding: 5% 10%;
+    margin: 0 auto;
+ }
+
+.subs{
+    background-color: tomato;
+    border: none;
+    padding: 5px 5px 5px 0;
+    border-radius: 0 5px 5px 0;
+    margin-left: -4px;
+ }
