added some padding on pick ammount section

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h2{
     display: flex;
     text-align: center;
     margin-top: 40px;
-    padding: 0 20px;
+    padding: 0 20%;
  }
  .pick-ammount div{
     width: 20%;
